--- a/2019HSQXSJK.csproj
+++ b/2019HSQXSJK.csproj
@@ -166,6 +166,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="StringToDisplay.cs" />
     <Compile Include="类\CIMISS获取数据.cs" />
     <Compile Include="类\ConfigInformation.cs" />
     <Compile Include="类\DecryptAndEncryptionHelper.cs" />
